--- a/index.html
+++ b/index.html
@@ -3,13 +3,21 @@
   <head>
     <meta charset="utf-8">
     <!-- My Styles -->
-    <link rel="stylesheet" href="/Stylesheets/main.css" type="text/css">
+    <link rel="stylesheet" href="Stylesheets/main.css" type="text/css">
     <!-- Bootstrap 4 -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <title>RGSW House Scoring</title>
   </head>
   <body>
+
+    <div class="container">
+      <div class="jumbotron">
+
+        <h1 class="display-4">RGSW House System</h1>
+
+      </div>
+    </div>
 
 
     <!-- Bootstrap 4 JS -->
