--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <!-- My Styles -->
     <link rel="stylesheet" href="Stylesheets/main.css" type="text/css">
+    <link rel="stylesheet" href="Stylesheets/customBootstrap.css" type="text/css">
     <!-- Bootstrap 4 -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
@@ -15,6 +16,8 @@
       <div class="jumbotron">
 
         <h1 class="display-4">RGSW House System</h1>
+        <button class="btn btn-primary btn-lg btn-custom">CustomColor button</button>
+        <button class="btn btn-primary">Primary button</button>
 
       </div>
     </div>
