Added default headers for files
Includes copyright information to ensure that my code is not taken.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!--
+@Author: Thomas Meeson <meesont>
+@Date:   11-10-2018
+@Last modified by:   meesont
+@Last modified time: 11-10-2018
+@Copyright: Copyright © 2018 Thomas Meeson
+-->
+
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -5,7 +14,7 @@
     <!-- My Styles -->
     <link rel="stylesheet" href="Stylesheets/main.css" type="text/css">
     <link rel="stylesheet" href="Stylesheets/customBootstrap.css" type="text/css">
-    <!-- Bootstrap 4 -->
+    <!-- Bootstrap 4 CDN -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <title>RGSW House Scoring</title>
@@ -17,15 +26,15 @@
 
         <h1 class="display-4">RGSW House System</h1>
         <button class="btn btn-primary btn-lg btn-custom">CustomColor button</button>
-        <button class="btn btn-primary">Primary button</button>
+        <button class="btn btn-primary btn-lg">Primary Button</button>
 
       </div>
     </div>
 
 
-    <!-- Bootstrap 4 JS -->
+    <!-- Bootstrap 4 JS CDN -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <!-- Jquery -->
+    <!-- Jquery CDN -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   </body>
 </html>
