--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 @Date:   11-10-2018
 @Last modified by:   meesont
 @Last modified time: 11-10-2018
+@License: Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+
+    http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
 @Copyright: Copyright © 2018 Thomas Meeson
 -->
 
@@ -17,19 +28,57 @@
     <!-- Bootstrap 4 CDN -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <title>RGSW House Scoring</title>
+    <title>House Scoring</title>
   </head>
   <body>
+
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-rgsgreen"> <!-- Create a navbar with a custom RGSW green shade background -->
+      <!--  Header -->
+      <a href="#" class="navbar-brand">RGSW</a> <!-- Create a brand title for the navbar TODO: add the rgsw crest -->
+      <!-- Hamburger -->
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navCollapseItems" aria-controls="navCollapseItems" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+
+      <div class="collapse navbar-collapse" id="navCollapseItems">
+        <!-- TODO: Add navbar items -->
+        <ul class="navbar-nav  mr-auto">
+          <li class="nav-item active"> <!--Active tag changes formattting to signify that this current item is active, nav item is  -->
+            <a href="#" class="nav-link">Home<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Leaderboard</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Houses</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Events</a>
+          </li>
+        </ul>
+
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a href="#" class="nav-link">Login</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="#" class="nav-link">Register</a>
+          </li>
+        </ul>
+      </div>
+
+    </nav>
 
     <div class="container">
       <div class="jumbotron">
 
-        <h1 class="display-4">RGSW House System</h1>
+        <h1 class="display-4">RGSW Houses</h1>
         <button class="btn btn-primary btn-lg btn-custom">CustomColor button</button>
-        <button class="btn btn-primary btn-lg">Primary Button</button>
-
       </div>
     </div>
+
 
 
     <!-- Bootstrap 4 JS CDN -->
