--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@ limitations under the License.
     <!-- Bootstrap 4 CDN -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+    <!-- Fontawsome CDN -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+
+
     <title>House Scoring</title>
   </head>
   <body>
@@ -43,9 +47,10 @@ limitations under the License.
 
       <div class="collapse navbar-collapse" id="navCollapseItems">
         <!-- TODO: Add navbar items -->
-        <ul class="navbar-nav  mr-auto">
+        <ul class="navbar-nav  mr-auto"> <!-- Mr-Auto aligns the items to right of the navbar -->
           <li class="nav-item active"> <!--Active tag changes formattting to signify that this current item is active, nav item is  -->
-            <a href="#" class="nav-link">Home<span class="sr-only">(current)</span></a>
+            <a href="#" class="nav-link">Home<span class="sr-only">(current)</span></a> <!-- sr-only on the span makes
+              the text invisible and only useful for screenreaders -->
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link">Leaderboard</a>
@@ -58,13 +63,15 @@ limitations under the License.
           </li>
         </ul>
 
+        <!-- Login and Register forms -->
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a href="#" class="nav-link">Login</a>
+            <a href="#" class="nav-link"><i class="fas fa-user"></i> Login</a>
           </li>
 
           <li class="nav-item">
-            <a href="#" class="nav-link">Register</a>
+            <a href="#" class="nav-link"><i class="fas fa-user-plus"></i> Signup</a> <!-- TODO: Decide if register is needed or if passwords can be
+              ported from the RGSW database -->
           </li>
         </ul>
       </div>
@@ -85,5 +92,7 @@ limitations under the License.
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <!-- Jquery CDN -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <!-- Fontawsome JS CDN -->
+    <script defer src="https://use.fontawesome.com/releases/v5.4.1/js/all.js" integrity="sha384-L469/ELG4Bg9sDQbl0hvjMq8pOcqFgkSpwhwnslzvVVGpDjYJ6wJJyYjvG3u8XW7" crossorigin="anonymous"></script>
   </body>
 </html>
