--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ limitations under the License.
           </li>
 
           <li class="nav-item">
-            <a href="#" class="nav-link"><i class="fas fa-user-plus"></i> Signup</a> <!-- TODO: Decide if register is needed or if passwords can be
+            <a href="register.html" class="nav-link" id='registerBtn'><i class="fas fa-user-plus"></i> Signup</a> <!-- TODO: Decide if register is needed or if passwords can be
               ported from the RGSW database -->
           </li>
         </ul>
@@ -87,6 +87,42 @@ limitations under the License.
     </div>
 
 
+    <!-- The login popup form -->
+
+    <div id="registerForm" class="modal">
+      <!-- Close button for corner -->
+      <span onclick="document.getElementById('registerForm').style.display='none';" class="close" title="Close Modal">&times;</span>
+
+      <form class="modal-content">
+        <div class="container">
+
+          <h1>Signup</h1>
+          <p>Please use this form to register as a user</p>
+
+          <label for="email">Email Address</label>
+          <input type="text" name="email" placeholder="Enter email" required>
+
+          <label for='psw'>Password</label>
+          <input type="password" name="psw" placeholder="Enter password" required>
+
+          <label for="psw-confirm">Confirm Password</label>
+          <input type="password" name="psw-confirm" placeholder="Confirm password">
+
+          <label>
+            <input type="checkbox" name="remember" checked='checked'
+            style='margin-bottom: 15px;'> Remember Me
+          </label>
+
+          <div class="clearfix">
+            <button type="button" id='registerFormCancelBtn' class='cancelbtn'>Cancel</button>
+            <button type="submit" class="registerFormConfirmBtn">Signup</button>
+          </div>
+
+        </div>
+      </form>
+    </div>
+
+
 
     <!-- Bootstrap 4 JS CDN -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
@@ -94,5 +130,9 @@ limitations under the License.
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <!-- Fontawsome JS CDN -->
     <script defer src="https://use.fontawesome.com/releases/v5.4.1/js/all.js" integrity="sha384-L469/ELG4Bg9sDQbl0hvjMq8pOcqFgkSpwhwnslzvVVGpDjYJ6wJJyYjvG3u8XW7" crossorigin="anonymous"></script>
+
+
+    <script src="Scripts/registerForm.js" charset="utf-8"></script>
+
   </body>
 </html>
