Major updates, include updates and fixes to registration page

--- a/register.html
+++ b/register.html
@@ -2,9 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
 
-    <link rel="stylesheet" href="Stylesheets/testStyles.css">
+    <link rel="stylesheet" href="Stylesheets/main.css">
+    <link rel="stylesheet" href="Stylesheets/customBootstrap.css">
     <!-- Bootstrap 4 CDN -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 
 
     <meta charset="utf-8">
@@ -12,10 +15,47 @@
   </head>
   <body>
 
-    <div id="nav-placeholder">
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-rgsgreen"> <!-- Create a navbar with a custom RGSW green shade background -->
+      <!--  Header -->
+      <a href="#" class="navbar-brand">RGSW</a> <!-- Create a brand title for the navbar TODO: add the rgsw crest -->
+      <!-- Hamburger -->
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navCollapseItems" aria-controls="navCollapseItems" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-    </div>
 
+      <div class="collapse navbar-collapse" id="navCollapseItems">
+        <!-- TODO: Add navbar items -->
+        <ul class="navbar-nav mr-auto"> <!-- Mr-Auto aligns the items to right of the navbar -->
+          <li class="nav-item"> <!--Active tag changes formattting to signify that this current item is active, nav item is  -->
+            <a href="index.html" class="nav-link">Home</a> <!-- sr-only on the span makes
+              the text invisible and only useful for screenreaders -->
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Leaderboard</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Houses</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Events</a>
+          </li>
+        </ul>
+
+        <!-- Login and Register forms -->
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a href="#" class="nav-link"><i class="fas fa-user"></i> Login</a>
+          </li>
+
+          <li class="nav-item active">
+            <a href="register.html" class="nav-link" id='registerBtn'><i class="fas fa-user-plus"></i> Signup<span class="sr-only">(current)</span></a> <!-- TODO: Decide if register is needed or if passwords can be
+              ported from the RGSW database -->
+          </li>
+        </ul>
+      </div>
+
+    </nav>
 
     <div class="container">
       <h1>Signup</h1>
@@ -52,10 +92,6 @@
     <!-- jQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8" crossorigin="anonymous"></script>
 
-    <script>
-      $.get("navbar.html", function(data){
-          $("#nav-placeholder").replaceWith(data);
-      });
-    </script>
+    <!-- script to get and push navbar to each page it it loaded on -->
   </body>
 </html>
