--- a/index.html
+++ b/index.html
@@ -36,61 +36,61 @@ limitations under the License.
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-rgsgreen"> <!-- Create a navbar with a custom RGSW green shade background -->
-      <!--  Header -->
-      <a href="#" class="navbar-brand">RGSW</a> <!-- Create a brand title for the navbar TODO: add the rgsw crest -->
-      <!-- Hamburger -->
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navCollapseItems" aria-controls="navCollapseItems" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-rgsgreen"> <!-- Create a navbar with a custom RGSW green shade background -->
+          <!--  Header -->
+          <a href="#" class="navbar-brand">RGSW</a> <!-- Create a brand title for the navbar TODO: add the rgsw crest -->
+          <!-- Hamburger -->
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navCollapseItems" aria-controls="navCollapseItems" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
 
-      <div class="collapse navbar-collapse" id="navCollapseItems">
-        <!-- TODO: Add navbar items -->
-        <ul class="navbar-nav mr-auto"> <!-- Mr-Auto aligns the items to right of the navbar -->
-          <li class="nav-item active"> <!--Active tag changes formattting to signify that this current item is active, nav item is  -->
-            <a href="#" class="nav-link">Home<span class="sr-only">(current)</span></a> <!-- sr-only on the span makes
-              the text invisible and only useful for screenreaders -->
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Leaderboard</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Houses</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Events</a>
-          </li>
-        </ul>
+          <div class="collapse navbar-collapse" id="navCollapseItems">
+            <!-- TODO: Add navbar items -->
+            <ul class="navbar-nav mr-auto"> <!-- Mr-Auto aligns the items to right of the navbar -->
+              <li class="nav-item active"> <!--Active tag changes formattting to signify that this current item is active, nav item is  -->
+                <a href="#" class="nav-link">Home<span class="sr-only">(current)</span></a> <!-- sr-only on the span makes
+                  the text invisible and only useful for screenreaders -->
+              </li>
+              <li class="nav-item">
+                <a href="#" class="nav-link">Leaderboard</a>
+              </li>
+              <li class="nav-item">
+                <a href="#" class="nav-link">Houses</a>
+              </li>
+              <li class="nav-item">
+                <a href="#" class="nav-link">Events</a>
+              </li>
+            </ul>
 
-        <!-- Login and Register forms -->
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a href="#" class="nav-link"><i class="fas fa-user"></i> Login</a>
-          </li>
+            <!-- Login and Register forms -->
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a href="#" class="nav-link"><i class="fas fa-user"></i> Login</a>
+              </li>
 
-          <li class="nav-item">
-            <a href="register.html" class="nav-link" id='registerBtn'><i class="fas fa-user-plus"></i> Signup</a> <!-- TODO: Decide if register is needed or if passwords can be
-              ported from the RGSW database -->
-          </li>
-        </ul>
-      </div>
+              <li class="nav-item">
+                <a href="register.html" class="nav-link" id='registerBtn'><i class="fas fa-user-plus"></i> Signup</a> <!-- TODO: Decide if register is needed or if passwords can be
+                  ported from the RGSW database -->
+              </li>
+            </ul>
+          </div>
 
-    </nav>
+        </nav>
 
-    <div class="container">
-      <div class="jumbotron">
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
 
         <h1 class="display-4">RGSW Houses</h1>
-        <button class="btn btn-primary btn-lg btn-custom">CustomColor button</button>
+        <!-- <button class="btn btn-primary btn-lg btn-custom">CustomColor button</button> -->
       </div>
     </div>
 
 
     <!-- The login popup form -->
-
     <div id="registerForm" class="modal">
-      <!-- Close button for corner -->
+      Close button for corner
       <span onclick="document.getElementById('registerForm').style.display='none';" class="close" title="Close Modal">&times;</span>
 
       <form class="modal-content">
@@ -130,9 +130,8 @@ limitations under the License.
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <!-- Fontawsome JS CDN -->
     <script defer src="https://use.fontawesome.com/releases/v5.4.1/js/all.js" integrity="sha384-L469/ELG4Bg9sDQbl0hvjMq8pOcqFgkSpwhwnslzvVVGpDjYJ6wJJyYjvG3u8XW7" crossorigin="anonymous"></script>
+    <!-- script to get and push navbar to each page it it loaded on -->
 
-
-    <script src="Scripts/registerForm.js" charset="utf-8"></script>
 
   </body>
 </html>
