--- a/login.html
+++ b/login.html
@@ -2,16 +2,18 @@
 <html lang="en" dir="ltr">
   <head>
 
-    <link rel="stylesheet" href="Stylesheets/main.css">
-    <link rel="stylesheet" href="Stylesheets/customBootstrap.css">
+    <!-- My Styles -->
+    <link rel="stylesheet" href="Stylesheets/main.css" type="text/css">
+    <link rel="stylesheet" href="Stylesheets/customBootstrap.css" type="text/css">
     <!-- Bootstrap 4 CDN -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+    <!-- Fontawsome CDN -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 
 
     <meta charset="utf-8">
-    <title>Houses - Registration</title>
+    <title>Houses - Login</title>
   </head>
   <body>
 
@@ -44,12 +46,12 @@
 
         <!-- Login and Register forms -->
         <ul class="navbar-nav">
-          <li class="nav-item">
-            <a href="login.html" class="nav-link"><i class="fas fa-user"></i> Login</a>
+          <li class="nav-item active">
+            <a href="#" class="nav-link"><i class="fas fa-user"></i> Login<span class="sr-only">(current)</span></a>
           </li>
 
-          <li class="nav-item active">
-            <a href="#" class="nav-link" id='registerBtn'><i class="fas fa-user-plus"></i> Signup<span class="sr-only">(current)</span></a> <!-- TODO: Decide if register is needed or if passwords can be
+          <li class="nav-item">
+            <a href="register.html" class="nav-link" id='registerBtn'><i class="fas fa-user-plus"></i> Signup</a> <!-- TODO: Decide if register is needed or if passwords can be
               ported from the RGSW database -->
           </li>
         </ul>
@@ -57,41 +59,7 @@
 
     </nav>
 
-    <div class="container">
-      <h1>Signup</h1>
-      <p>Please use this form to register as a user</p>
-
-      <form>
-        <div class="form-group">
-          <label for="email">Email Address</label>
-          <input type="text" class='form-control' name="email" placeholder="Enter email" required>
-        </div>
-
-        <div class="form-group">
-          <label for='psw'>Password</label>
-          <input type="password" class='form-control' name="psw" placeholder="Enter password" required>
-        </div>
 
 
-        <div class='form-group'>
-          <label for="psw-confirm">Confirm Password</label>
-          <input type="password" class='form-control' name="psw-confirm" placeholder="Confirm password">
-        </div>
-
-        <!-- <div class="form-check">
-          <input type="checkbox" name="remember" checked='checked' class="form-check-input">
-          <label for='remember' class='form-check-input'> Remember Me</label>
-        </div> -->
-
-        <button type="button" id='registerFormCancelBtn' class='btn btn-danger btn-block'>Cancel</button>
-        <button type="submit" class="registerFormConfirmBtn btn btn-success btn-block">Signup</button>
-      </form>
-
-    </div>
-
-    <!-- jQuery CDN -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8" crossorigin="anonymous"></script>
-
-    <!-- script to get and push navbar to each page it it loaded on -->
   </body>
 </html>
