Fix issues with navbar

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ limitations under the License.
         <!-- TODO: Add navbar items -->
         <ul class="navbar-nav mr-auto"> <!-- Mr-Auto aligns the items to right of the navbar -->
           <li class="nav-item active"> <!--Active tag changes formattting to signify that this current item is the one that is currently in use-->
-            <a href="#" class="nav-link">Home<span class="sr-only">(current)</span></a> <!-- sr-only on the span makes
+            <a href="" class="nav-link">Home<span class="sr-only">(current)</span></a> <!-- sr-only on the span makes
               the text invisible and only useful for screenreaders -->
           </li>
           <li class="nav-item">
