--- a/register.html
+++ b/register.html
@@ -17,7 +17,7 @@
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-rgsgreen"> <!-- Create a navbar with a custom RGSW green shade background -->
       <!--  Header -->
-      <a href="#" class="navbar-brand">RGSW</a> <!-- Create a brand title for the navbar TODO: add the rgsw crest -->
+      <a href="index.html" class="navbar-brand">RGSW</a> <!-- Create a brand title for the navbar TODO: add the rgsw crest -->
       <!-- Hamburger -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navCollapseItems" aria-controls="navCollapseItems" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
