--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-rgsgreen"> <!-- Create a navbar with a custom RGSW green shade background -->
       <!--  Header -->
-      <a href="#" class="navbar-brand">RGSW</a> <!-- Create a brand title for the navbar TODO: add the rgsw crest -->
+      <a href="index.html" class="navbar-brand">RGSW</a> <!-- Create a brand title for the navbar TODO: add the rgsw crest -->
       <!-- Hamburger -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navCollapseItems" aria-controls="navCollapseItems" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -59,7 +59,32 @@
 
     </nav>
 
+    <div class="container">
+      <h1>Login</h1>
+      <p>Admininstrator Login</p>
 
+      <form>
+        <div class="form-group">
+          <label for="email">Email Address</label>
+          <input type="text" class='form-control' name="email" placeholder="Enter email" required>
+        </div>
+
+        <div class="form-group">
+          <label for='psw'>Password</label>
+          <input type="password" class='form-control' name="psw" placeholder="Enter password" required>
+        </div>
+
+
+        <!-- <div class="form-check">
+          <input type="checkbox" name="remember" checked='checked' class="form-check-input">
+          <label for='remember' class='form-check-input'> Remember Me</label>
+        </div> -->
+
+        <button type="button" id='registerFormCancelBtn' class='btn btn-danger btn-block'>Cancel</button>
+        <button type="submit" class="registerFormConfirmBtn btn btn-success btn-block">Signup</button>
+      </form>
+
+    </div>
 
   </body>
 </html>
